--- a/index.html
+++ b/index.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="./resources/css/style.css" style="text/css" rel="stylesheet">
     <meta charset="utf-8">
     <title>My Times</title>
   </head>
   <body>
+
+    <!-- Header -->
+
+    <div class="header">
+      <div class="logo">
+        <img src="./resources/css/images/img-myt-logo.jpg" alt="mytimes logo" />
+        <p>My Times</p>
+      </div>
+      <div class="navigation">
+        <span class="headlink"><a href="#">World</a></span>
+        <span class="headlink"><a href="#">U.S.</a></span>
+        <span class="headlink"><a href="#">Tech</a></span>
+        <span class="headlink"><a href="#">Science</a></span>
+      </div>
+    </div>
+
+
+
+
+    <footer>
+
+    </footer>
 
   </body>
 </html>
