Add footer and complete style.css

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <p>My Times</p>
       </div>
       <div class="navigation">
-        <span class="headlink"><a href="#">World</a></span>
-        <span class="headlink"><a href="#">U.S.</a></span>
-        <span class="headlink"><a href="#">Tech</a></span>
-        <span class="headlink"><a href="#">Science</a></span>
+        <span class="link"><a href="#">World</a></span>
+        <span class="link"><a href="#">U.S.</a></span>
+        <span class="link"><a href="#">Tech</a></span>
+        <span class="link"><a href="#">Science</a></span>
       </div>
     </div>
 
@@ -28,8 +28,9 @@
           <div class="mother main-background">
             <p>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</p>
           </div>
-          <div class="valley">
-            <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+
+            <div class="valley">
+              <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec.
               Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus.
               Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris.
@@ -37,23 +38,29 @@
               Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio.
               Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit.
               Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
-          </div>
-          <div class="orca">
-            <h2>Orca Spends Vacation at Land World Puget</h2>
-            <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus.
-               Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
-          </div>
-          <div class="earth earth-background">
-            <p>Earth Spins Backwards for 2017</p>
-          </div>
-          <div class="burger">
-            <h2>Burger for Breakfast: How Early is too Early?</h2>
-            <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus.
+            </div>
+            <div class="story">
+            <div class="one">
+              <div class="orca">
+                <h2>Orca Spends Vacation at Land World Puget</h2>
+                <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus.
+                  Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
+                </div>
+                <div class="earth earth-background">
+                  <p>Earth Spins Backwards for 2017</p>
+                </div>
+            </div>
+            <div class="two">
+            <div class="burger">
+              <h2>Burger for Breakfast: How Early is too Early?</h2>
+              <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus.
                Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
-          </div>
-          <div class="research camera-background">
-            <p>Research Shows Cameras Erase Memory</p>
-          </div>
+            </div>
+            <div class="research camera-background">
+               <p>Research Shows Cameras Erase Memory</p>
+            </div>
+            </div>
+            </div>
         </div>
         <div class="medium">
           <div class="fbi">
@@ -74,23 +81,40 @@
               Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.</p>
           </div>
         </div>
-
+      </div>
         <div class="small">
           <div class="cookie">
             <img src="./resources/css/images/img-news-bite.png" alt="picture of a bited cookie" />
           </div>
           <div class="bites">
             <h2>NEWS BITES</h2>
-            <P>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can</P>
+            <div class="list">
+              <P>Cat Emoji Goes Viral</p>
+              <p>Buy Youtube Views</p>
+              <p>Home Business Advertising Ideas</p>
+              <p>Advertising Internet Online</p>
+              <p>Illustration in Marketing Materials</p>
+              <p>Finally a Top Secret Way You Can</P>
+            </div>
           </div>
         </div>
-
     </div>
 
-
-
-    <footer>
-
+    <footer class="bottom">
+      <div class="bone">
+        <p class="times">MY Times</p>
+        <div class="navi">
+          <span class="link"><a href="#">World</a></span>
+          <span class="link"><a href="#">U.S.</a></span>
+          <span class="link"><a href="#">Tech</a></span>
+          <span class="link"><a href="#">Science</a></span>
+        </div>
+      </div>
+      <div class="boo">
+        <div class="copy">
+          <p>&copy 2016, My Times (A Division of Codecademy bite)</p>
+        </div>
+      </div>
     </footer>
 
   </body>
